@@ -2,6 +2,10 @@
 # Process this file with automake.
 
 EXTRA_DIST = BUGS HACKING 
+
 bin_PROGRAMS = bini unbini
 unbini_SOURCES = unbini.c pool.c pool.h
 bini_SOURCES = parse.y scan.l convert.c convert.h pool.c pool.h
+
+# The test suite
+TESTS = checkbuild.sh
