@@ -1,3 +1,2 @@
 - stdin on -
 - improve string table functions (hash table)
-- add test suite
